appsrv.yaml
# Quarkus Application Server
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beamvr-app

spec:
  replicas: 1
  selector:
    matchLabels:
      app: beamvr-app
  template:
    metadata:
      labels:
        app: beamvr-app
    spec:
      containers:
        - name: beamvr-app
          image: registry.cloud.htl-leonding.ac.at/e.plakolb/beamvr-app
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          startupProbe:
            httpGet:
              path: /api/q/health
              port: 80
            timeoutSeconds: 5
            initialDelaySeconds: 15
          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/q/health
              port: 80
            timeoutSeconds: 5
            initialDelaySeconds: 60
            periodSeconds: 120
---
apiVersion: v1
kind: Service
metadata:
  name: beamvr-app

spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: beamvr-app
